# Sprout

./: .clang-format  .gitignore  Makefile.am  Makefile.common  configure.ac
etc/m4/: ac_config_cxx_warnings.m4  boost.m4
include/: Makefile.am
include/sprout/bit/: operation.hpp  reverse.hpp
include/sprout/config/: config.hpp  defs.hpp  user_config.hpp
include/sprout/config/compiler/: visualc.hpp
include/sprout/math/: ceil.hpp  floor.hpp  itrunc.hpp  pow.hpp  round.hpp  trunc.hpp
include/sprout/math/quaternion/: cos.hpp  sin.hpp
include/sprout/numeric/fft/cxx14/: fft.hpp  ifft.hpp
include/sprout/random/: linear_congruential.hpp
libs/: Makefile.am
libs/algorithm/test/: Makefile.am
libs/array/test/: Makefile.am
libs/bitset/test/: Makefile.am
libs/cstring/test/: Makefile.am
libs/math/test/: Makefile.am  ceil.cpp  floor.cpp  round.cpp  trunc.cpp
libs/net/test/: Makefile.am
libs/optional/test/: Makefile.am
libs/random/: Makefile.am
libs/random/example/: Makefile.am
libs/random/test/: Makefile.am
libs/string/example/: Makefile.am
libs/string/test/: Makefile.am
libs/tuple/test/: Makefile.am
libs/utility/: Makefile.am
libs/utility/string_view/test/: Makefile.am
libs/variant/: Makefile.am
libs/variant/test/: Makefile.am
libs/weed/: Makefile.am
libs/weed/example/: Makefile.am
sprout/darkroom/renderers/: whitted_style.hpp
sprout/math/: cos.hpp
sprout/math/quaternion/: exp.hpp
tools/: Makefile.am
tools/compost/: Makefile.am  wavconv.cpp
tools/darkroom/: Makefile.am  texconv.cpp
tools/files/: Makefile.am  filegraph.cpp
